creati due input type text e un button

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    
+    <input type="text">
+    <input type="text">
+    <button>Invia</button>
+
 
 
 
