dati 3 id agli input in index.html

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    <input type="text">
-    <input type="text">
-    <button>Invia</button>
+    <input id="km-percorrere" type="text">
+    <input id="eta-passeggero" type="text">
+    <button id="calcolo-km-eta">Invia</button>
 
 
 
