--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calcolo del prezzo del biglietto del treno</title>
+    <!-- Link Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- Link file Css -->
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
+
+    <header>
+        <h1>
+
+        </h1>
+    </header>
+
+
     <input id="km-percorrere" type="text">
     <input id="eta-passeggero" type="text">
     <button id="calcolo-km-eta">Invia</button>
