--- a/index.html
+++ b/index.html
@@ -12,14 +12,50 @@
 <body>
 
     <header>
-        <h1>
-
-        </h1>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center pt-3">
+                    <h1>
+                        CALCOLA IL PREZZO DEL TUO BIGLIETTO
+                    </h1>
+                </div>
+            </div>
+        </div>
     </header>
 
+    <main>
+        <div class="container">
+            <div class="card">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-4">
+                        a
+                    </div>
+                    <div class="col-4">
+                        b
+                    </div>
+                    <div class="col-4">
+                        c                    
+                    </div>
+                  </div>
 
-    <input id="km-percorrere" type="text">
-    <input id="eta-passeggero" type="text">
+                  <div class="row">
+                    <div class="col-4">
+                        <input type="text"> 
+                    </div>
+                    <div class="col-4">
+                        <input id="km-percorrere" type="text">
+                    </div>
+                    <div class="col-4">
+                        <input id="eta-passeggero" type="text">                      
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+        </div>
+    </main>
+
     <button id="calcolo-km-eta">Invia</button>
 
 
