costruito form in index.html

--- a/index.html
+++ b/index.html
@@ -27,36 +27,43 @@
         <div class="container">
             <div class="card">
                 <div class="card-body">
-                  <div class="row">
-                    <div class="col-4">
-                        a
+                  <div class="row justify-content-evenly p-2">
+                    <div class="col-3">
+                         Nome e Cognome
                     </div>
-                    <div class="col-4">
-                        b
+                    <div class="col-3">
+                        Km da Percorrere
                     </div>
-                    <div class="col-4">
-                        c                    
+                    <div class="col-3">
+                        Età Passeggero                    
                     </div>
                   </div>
 
-                  <div class="row">
-                    <div class="col-4">
+                  <div class="row justify-content-evenly p-2">
+                    <div class="col-3">
                         <input type="text"> 
                     </div>
-                    <div class="col-4">
+                    <div class="col-3">
                         <input id="km-percorrere" type="text">
                     </div>
-                    <div class="col-4">
+                    <div class="col-3">
                         <input id="eta-passeggero" type="text">                      
                     </div>
                   </div>
 
+                  <div class="row p-4">
+                    <div class="col-6 text-end">
+                        <button id="calcolo-km-eta">Genera</button>
+                    </div>
+                    <div class="col-6">
+                        <button>Annulla</button>
+                    </div>
+                  </div>
                 </div>
-              </div>
+            </div>
         </div>
     </main>
 
-    <button id="calcolo-km-eta">Invia</button>
 
 
 
